@@ -4,6 +4,7 @@ use strict;
 use warnings;
 use Padre::Wx                        ();
 use Padre::Wx::Directory::TreeCtrl   ();
+use Padre::Wx::Directory::DirPicker  ();
 use Padre::Wx::Directory::SearchCtrl ();
 
 our $VERSION = '0.41';
@@ -14,10 +15,13 @@ getters => {
 	tree     => 'tree',
 	search   => 'search',
 	fallback => 'fallback',
+	dirpicker => 'dirpicker',
 },
 accessors => {
 	project_dir  => 'project_dir',
 	previous_dir => 'previous_dir',
+	project_dir_original  => 'project_dir_original',
+	previous_dir_original => 'previous_dir_original',
 };
 
 # Creates the Directory Left Panel with a Search field
@@ -37,13 +41,15 @@ sub new {
 	# Creates the Search Field and the Directory Browser
 	$self->{tree}   = Padre::Wx::Directory::TreeCtrl->new($self);
 	$self->{search} = Padre::Wx::Directory::SearchCtrl->new($self);
+	$self->{dirpicker} =  Padre::Wx::Directory::DirPicker->new($self);
 
 	# Fill the panel
 	my $sizerv = Wx::BoxSizer->new( Wx::wxVERTICAL );
 	my $sizerh = Wx::BoxSizer->new( Wx::wxHORIZONTAL );
-	$sizerv->Add( $self->search, 0, Wx::wxALL | Wx::wxEXPAND, 0 );
-	$sizerv->Add( $self->tree,   1, Wx::wxALL | Wx::wxEXPAND, 0 );
-	$sizerh->Add( $sizerv,       1, Wx::wxALL | Wx::wxEXPAND, 0 );
+	$sizerv->Add( $self->search,    0, Wx::wxALL | Wx::wxEXPAND, 0 );
+	$sizerv->Add( $self->dirpicker, 0, Wx::wxALL | Wx::wxEXPAND, 0 );
+	$sizerv->Add( $self->tree,      1, Wx::wxALL | Wx::wxEXPAND, 0 );
+	$sizerh->Add( $sizerv,          1, Wx::wxALL | Wx::wxEXPAND, 0 );
 
 	# Fits panel layout
 	$self->SetSizerAndFit($sizerh);
@@ -91,16 +97,20 @@ sub refresh {
 	# Finds project base
 	my $doc = $current->document;
 	my $dir = $doc ? $doc->project_dir : $self->fallback;
+	$self->{projects_dirs}->{$dir} ||= $dir;
 
 	# Save the current project path
-	$self->project_dir($dir);
+	$self->project_dir( $self->{projects_dirs}->{$dir} );
+	$self->project_dir_original( $dir );
 
 	# Calls Searcher and Browser refresh
 	$self->tree->refresh;
 	$self->search->refresh;
+	$self->dirpicker->refresh;
 
 	# Sets the last project to the current one
-	$self->previous_dir($dir);
+	$self->previous_dir( $self->{projects_dirs}->{$dir} );
+	$self->previous_dir_original( $dir );
 
 	return 1;
 }
